Fix bug where sometimes BlobUnderConstruction instances could leak.

Bug: 752639
Change-Id: Id57bfbaecebb54522767c1044be76119d4840ae5
Reviewed-on: https://chromium-review.googlesource.com/602875
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Commit-Queue: Marijn Kruisselbrink <mek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492175}
Former-commit-id: a3c3176337d980e3787a2f4e55b0659a38427330