storage/browser/blob/blob_registry_impl_unittest.cc
@@ -185,6 +185,10 @@ class BlobRegistryImplTest : public testing::Test {
                                   std::move(request)));
   }
 
+  size_t BlobsUnderConstruction() {
+    return registry_impl_->BlobsUnderConstructionForTesting();
+  }
+
  protected:
   base::ScopedTempDir data_dir_;
   base::test::ScopedTaskEnvironment scoped_task_environment_;
@@ -242,6 +246,7 @@ TEST_F(BlobRegistryImplTest, Register_EmptyUUID) {
 
   blob.FlushForTesting();
   EXPECT_TRUE(blob.encountered_error());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ExistingUUID) {
@@ -260,6 +265,7 @@ TEST_F(BlobRegistryImplTest, Register_ExistingUUID) {
 
   blob.FlushForTesting();
   EXPECT_TRUE(blob.encountered_error());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_EmptyBlob) {
@@ -285,6 +291,7 @@ TEST_F(BlobRegistryImplTest, Register_EmptyBlob) {
 
   EXPECT_FALSE(handle->IsBroken());
   EXPECT_EQ(BlobStatus::DONE, handle->GetBlobStatus());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ReferencedBlobClosedPipe) {
@@ -306,6 +313,7 @@ TEST_F(BlobRegistryImplTest, Register_ReferencedBlobClosedPipe) {
 
   EXPECT_TRUE(handle->IsBroken());
   EXPECT_EQ(BlobStatus::ERR_REFERENCED_BLOB_BROKEN, handle->GetBlobStatus());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_SelfReference) {
@@ -333,6 +341,7 @@ TEST_F(BlobRegistryImplTest, Register_SelfReference) {
 
   registry_.FlushForTesting();
   EXPECT_TRUE(registry_.encountered_error());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_CircularReference) {
@@ -396,6 +405,7 @@ TEST_F(BlobRegistryImplTest, Register_CircularReference) {
 
   registry_.FlushForTesting();
   EXPECT_TRUE(registry_.encountered_error());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 #endif
 }
 
@@ -425,6 +435,7 @@ TEST_F(BlobRegistryImplTest, Register_NonExistentBlob) {
 
   registry_.FlushForTesting();
   EXPECT_TRUE(registry_.encountered_error());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ValidBlobReferences) {
@@ -471,6 +482,7 @@ TEST_F(BlobRegistryImplTest, Register_ValidBlobReferences) {
 
   EXPECT_EQ(expected_blob_data, *handle2->CreateSnapshot());
   EXPECT_EQ(expected_blob_data, *handle3->CreateSnapshot());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_UnreadableFile) {
@@ -492,6 +504,7 @@ TEST_F(BlobRegistryImplTest, Register_UnreadableFile) {
 
   EXPECT_TRUE(handle->IsBroken());
   EXPECT_EQ(BlobStatus::ERR_FILE_WRITE_FAILED, handle->GetBlobStatus());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ValidFile) {
@@ -519,6 +532,7 @@ TEST_F(BlobRegistryImplTest, Register_ValidFile) {
   expected_blob_data.AppendFile(path, 0, 16, base::Time());
 
   EXPECT_EQ(expected_blob_data, *handle->CreateSnapshot());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_FileSystemFile_InvalidScheme) {
@@ -539,6 +553,7 @@ TEST_F(BlobRegistryImplTest, Register_FileSystemFile_InvalidScheme) {
 
   EXPECT_TRUE(handle->IsBroken());
   EXPECT_EQ(BlobStatus::ERR_FILE_WRITE_FAILED, handle->GetBlobStatus());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_FileSystemFile_UnreadablFile) {
@@ -561,6 +576,7 @@ TEST_F(BlobRegistryImplTest, Register_FileSystemFile_UnreadablFile) {
 
   EXPECT_TRUE(handle->IsBroken());
   EXPECT_EQ(BlobStatus::ERR_FILE_WRITE_FAILED, handle->GetBlobStatus());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_FileSystemFile_Valid) {
@@ -588,6 +604,7 @@ TEST_F(BlobRegistryImplTest, Register_FileSystemFile_Valid) {
   expected_blob_data.AppendFileSystemFile(url, 0, 16, base::Time());
 
   EXPECT_EQ(expected_blob_data, *handle->CreateSnapshot());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_BytesInvalidEmbeddedData) {
@@ -615,6 +632,7 @@ TEST_F(BlobRegistryImplTest, Register_BytesInvalidEmbeddedData) {
   EXPECT_EQ(0u, reply_request_count_);
   EXPECT_EQ(0u, stream_request_count_);
   EXPECT_EQ(0u, file_request_count_);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_BytesInvalidDataSize) {
@@ -646,6 +664,7 @@ TEST_F(BlobRegistryImplTest, Register_BytesInvalidDataSize) {
   EXPECT_EQ(0u, reply_request_count_);
   EXPECT_EQ(0u, stream_request_count_);
   EXPECT_EQ(0u, file_request_count_);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_BytesOutOfMemory) {
@@ -671,6 +690,7 @@ TEST_F(BlobRegistryImplTest, Register_BytesOutOfMemory) {
   EXPECT_EQ(0u, reply_request_count_);
   EXPECT_EQ(0u, stream_request_count_);
   EXPECT_EQ(0u, file_request_count_);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ValidEmbeddedBytes) {
@@ -700,6 +720,7 @@ TEST_F(BlobRegistryImplTest, Register_ValidEmbeddedBytes) {
   EXPECT_EQ(0u, reply_request_count_);
   EXPECT_EQ(0u, stream_request_count_);
   EXPECT_EQ(0u, file_request_count_);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ValidBytesAsReply) {
@@ -728,6 +749,7 @@ TEST_F(BlobRegistryImplTest, Register_ValidBytesAsReply) {
   EXPECT_EQ(1u, reply_request_count_);
   EXPECT_EQ(0u, stream_request_count_);
   EXPECT_EQ(0u, file_request_count_);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ValidBytesAsStream) {
@@ -762,6 +784,7 @@ TEST_F(BlobRegistryImplTest, Register_ValidBytesAsStream) {
   EXPECT_EQ(0u, reply_request_count_);
   EXPECT_EQ(1u, stream_request_count_);
   EXPECT_EQ(0u, file_request_count_);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_ValidBytesAsFile) {
@@ -805,6 +828,7 @@ TEST_F(BlobRegistryImplTest, Register_ValidBytesAsFile) {
     remaining_size -= item->length();
   }
   EXPECT_EQ(0u, remaining_size);
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest, Register_BytesProviderClosedPipe) {
@@ -827,6 +851,7 @@ TEST_F(BlobRegistryImplTest, Register_BytesProviderClosedPipe) {
 
   EXPECT_TRUE(handle->IsBroken());
   EXPECT_EQ(BlobStatus::ERR_SOURCE_DIED_IN_TRANSIT, handle->GetBlobStatus());
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest,
@@ -847,6 +872,7 @@ TEST_F(BlobRegistryImplTest,
 
   EXPECT_TRUE(context_->registry().HasEntry(kId));
   EXPECT_TRUE(context_->GetBlobDataFromUUID(kId)->IsBeingBuilt());
+  EXPECT_EQ(1u, BlobsUnderConstruction());
 
   // Now drop all references to the blob.
   blob.reset();
@@ -857,6 +883,7 @@ TEST_F(BlobRegistryImplTest,
   // Now cause construction to fail, if it would still be going on.
   request = nullptr;
   base::RunLoop().RunUntilIdle();
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 TEST_F(BlobRegistryImplTest,
@@ -878,6 +905,7 @@ TEST_F(BlobRegistryImplTest,
 
   EXPECT_TRUE(context_->registry().HasEntry(kId));
   EXPECT_TRUE(context_->GetBlobDataFromUUID(kId)->IsBeingBuilt());
+  EXPECT_EQ(1u, BlobsUnderConstruction());
 
   // Now drop all references to the blob.
   blob.reset();
@@ -889,6 +917,7 @@ TEST_F(BlobRegistryImplTest,
   CreateBytesProvider(kData, std::move(request));
   scoped_task_environment_.RunUntilIdle();
   base::RunLoop().RunUntilIdle();
+  EXPECT_EQ(0u, BlobsUnderConstruction());
 }
 
 }  // namespace storage
